--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.11.0",
     "framer-motion": "^12.23.12",
     "react": "^19.1.0",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.1",
-    "swiper": "^11.2.10"
+    "swiper": "^11.2.10",
+    "TagCloud": "^2.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
